--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.3",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "vue-eslint-parser": "^8.3.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5"
   }
 }
